# fund_mail

./: .gitignore  INSTALL.md  README.md  config.py  env.sample  fetch_email.py  fund_mail.spec  fund_mail_once.spec  fund_mail_one_day.spec  imap_1.py  imap_2.py  imap_3.py  last_time_example.json  logger.py  login_test.py  main.py  make_exe.sh  make_exe_one_day.sh  make_one_day.sh  make_svc.sh  manage_fund_mail.bat  pyproject.toml  run_one_day.sh  sftp_upload.py
code_smaples/: config.py  db.py  imap_3.py  login_test2.py  main.py
src/: config.py  db_actions.py  exceptions.py  fetch_email.py  find_first_mail.py  logger.py  main.py  main_once.py  main_one_day.py  pst_extract.py  service_wrapper.py  service_wrapper0.py  sftp_upload.py  test_service.py  utils.py
