[project]
name = "fund-mail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.14",
    "imapclient>=3.0.1",
    "msal>=1.32.3",
    "paramiko>=3.5.1",
    "python-dotenv>=1.1.0",
    "pyzmail36>=1.0.5",
    "sqlalchemy>=2.0.41",
]
